Fix word break in WYSIWYG editor

--- a/resources/assets/sass/_components.scss
+++ b/resources/assets/sass/_components.scss
@@ -80,7 +80,7 @@
     max-width: 100%;
 
     trix-editor {
-        word-break: break-all;
+        word-break: break-word;
 
         ol, ul {
             padding-left: 1rem;
